--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <section id="about">
                 <h2>About Me</h2>
                 <img src="./images/IMG_20250826_220652_940.webp" alt="My photo! might change it to a more professional one later.." width="160" height="200">
-                <p> This will be my introduction or me talking more about myself :).</p>
+                <p> Hello! My name is Isabella Guerrero, and this portfolio showcases my experience with coding and collaboration on various programming projects. 
+                    I am majoring in Secondary Education, and I am passionate about integrating technology and coding into the classroom.
+                My goal is to create engaging lessons and presentations that help students connect with digital literacy and problem-solving in meaningful ways.
+                I also enjoy designing my own instructional materials to enhance the learning experience. 
+        </p>
 
             </section>
 
