--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <h2>Project Samples</h2>
 
                 <article class="card">
-                    <h3>Project One Title</h3>
+                    <h3>Mistery Shack Website</h3>
                     <p> Description. </p>
-                    <a href="#" class="btn" target="_blank">View GitHub Repository</a>
+                    <a href="https://github.com/Iguer61980/Gravity-falls.github.io" class="btn" target="_blank">View GitHub Repository</a>
                 </article>
                 <article class="card">
-                    <h3>Project Two Title</h3>
+                    <h3>Saiki K Website</h3>
                     <p> Description.</p>
-                    <a href="#" class="btn" target="_blank">View GitHub Repository</a>
+                    <a href="https://github.com/Iguer61980/Saiki-K-Website" class="btn" target="_blank">View GitHub Repository</a>
                 </article>
             </section>
 
