Added description for project samples

--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
 
                 <article class="card">
                     <h3>Mistery Shack Website</h3>
-                    <p> Description. </p>
+                    <p> This project is about creating a website for the Mystery Shack in Gravity Falls. Mystery Shack is the store own by Stan where he would sell 
+                        strange and mysterious merchandise from Gravity Falls mysteries. I worked on this website along Kara StJohn and Sofia Gomez, I was the one 
+                        in charge of developing the CSS homepage part of the website, and adding on to the CSS along my collaborators. The website takes inspiration 
+                        from the Mystery Shack and the lore of Gravity Falls. We decided to add three pages to the website: Homepage, Meet the Staff, and a Mystery 
+                        Shack Gift Shop. The tone of the website leans into tourist-trap/cabin in the woods vibe. Intentionally chaotic and all over the place with a
+                        silly, mysterious tone as well.</p>
                     <a href="https://github.com/Iguer61980/Gravity-falls.github.io" class="btn" target="_blank">View GitHub Repository</a>
                 </article>
                 <article class="card">
                     <h3>Saiki K Website</h3>
-                    <p> Description.</p>
+                    <p> I developed this website on the </p>
                     <a href="https://github.com/Iguer61980/Saiki-K-Website" class="btn" target="_blank">View GitHub Repository</a>
                 </article>
             </section>
