added description for samples

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
                 <article class="card">
                     <h3>Mistery Shack Website</h3>
-                    <p> This project is about creating a website for the Mystery Shack in Gravity Falls. Mystery Shack is the store own by Stan where he would sell 
-                        strange and mysterious merchandise from Gravity Falls mysteries. I worked on this website along Kara StJohn and Sofia Gomez, I was the one 
-                        in charge of developing the CSS homepage part of the website, and adding on to the CSS along my collaborators. The website takes inspiration 
+                    <p> This project is about creating a website for the Mystery Shack in "Gravity Falls". Mystery Shack is the store owned by Stan, where he sells
+                        strange and mysterious merchandise from "Gravity Falls" mysteries. I worked on this website along with Kara StJohn and Sofia Gomez. I was the one 
+                        in charge of developing the homepage part of the website, which meant doing the HTML and CSS for that page, as well as helping with CSS in other pages with my collaborators. The website takes inspiration 
                         from the Mystery Shack and the lore of Gravity Falls. We decided to add three pages to the website: Homepage, Meet the Staff, and a Mystery 
                         Shack Gift Shop. The tone of the website leans into tourist-trap/cabin in the woods vibe. Intentionally chaotic and all over the place with a
                         silly, mysterious tone as well.</p>
@@ -49,7 +49,10 @@
                 </article>
                 <article class="card">
                     <h3>Saiki K Website</h3>
-                    <p> I developed this website on the </p>
+                    <p> I developed this website as if Saiki K from “The Disastrous Life of Saiki K” was the one in charge of creating it. It has inside jokes that only people 
+                        who have watched the anime know about. The website includes HTML, CSS for style, and a folder with the pictures used. The tone of the website leans into 
+                        the sarcastic personality of Saiki K by adding phrases that he would most likely say. The website also has hidden messages or easter eggs talking about 
+                        his psychic powers (the whole premise of the anime is that he hides away his psychic powers from everyone else).  </p>
                     <a href="https://github.com/Iguer61980/Saiki-K-Website" class="btn" target="_blank">View GitHub Repository</a>
                 </article>
             </section>
