--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 
             <section id="extras" class="section">
                 <h2>Additional Materials</h2>
-                <p>You may include lesson plans, teaching artifacts, creative work</p>
+                <p>This is an example of the lesson plans that I've created with the addition of technology.</p>
             </section>
-        
+            <div class="extras-list">
+                <a class="extra-item" href="./lessons:/NMSU_SecondaryTemplate_Unit1.docx" target="_blank">Lesson Plan 1 - Argumentative Writing</a>
+            </div>
         <footer id="contact">
                 <h2>Contact Information</h2>
                 <p>Email: iguer303@nmsu.edu</p>       
